Wed Nov 23 2005  Loic Dachary  <loic@gnu.org>

	* Release 1.0.13

	* pokernetwork/pokerserver.py: kill obsolete tournament balancing functions

	* pokernetwork/__init__.py (protocol_number): protocol changes because the
	  server refers to new betting structures.

	* pokerweb/pages/class.poker.php: rename soapclient to nusoapclient to avoid
	  name conflict in php5

Mon Nov 14 2005  Loic Dachary  <loic@gnu.org>

	* pokerui/pokerinterface.py (PokerInterface.handleBuyIn): double click safeguard

	* pokerui/pokerinterface.py (PokerInterface.handleTournaments): all tournaments messages have
	  only two arguments, not three

	* upgrades/poker.server/1.0.12-1.0.13.xsl: ping time set to 240

	* pokerui/pokerrenderer.py (PokerRenderer.sitOut): avoid race condition
	  when sitout is called and the player is no longer at the table.

Fri Nov 04 2005  Loic Dachary  <loic@gnu.org>

	* pokerui/pokerrenderer.py (PokerRenderer.restoreGameSate): send the 
	  appropriate processing/ready packets when switching games

	* conf/poker.server.xml.in: betting structures changed

	* pokerclient2d/menu.c (handle_menu): menu bar as wide as screen

Wed Nov 02 2005  Loic Dachary  <loic@gnu.org>

	* pokerui/pokeranimation.py (PokerAnimationPlayer.setPlayerDelay): set the
	  delay for the next incoming packet in order to ensure that the animation
	  has enough time to finish before another one comes in the way

Mon Oct 31 2005  Loic Dachary  <loic@gnu.org>

	* pokernetwork/protocol.py (UGAMEProtocol.setPingDelay): forgot underscore

Fri Oct 28 2005  Johan Euphrosine  <johan@mekensleep.com>

	* pokerclient2d/network.c: 
	* pokerclient2d/main.c: 
	added handling of GIOCondition G_IO_ERR: call gtk_main_quit
	REALLY fix performance issue (CPU 100%), when interface server disconnect due to a crash
	
Thu Oct 27 2005  Loic Dachary  <loic@gnu.org>

	* pokernetwork/pokerclient.py (PokerClientFactory.isAlwaysHandled): some packets are never
	  delayed
